<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>occupancy_grid_map</name>
  <version>0.1.0</version>
  <description>Clustering of the pointcloud to array of poincloud clusters</description>
  <maintainer email="k.eldakroury@innopolis.university">Karim ElDakroury</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>grid_map_costmap_2d</depend>

  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>

  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tf2</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>